Fixed bug with alignment of grid rows in extension marketplace

--- a/site/ts/elements/extensions-marketplace/extensions-marketplace.css
+++ b/site/ts/elements/extensions-marketplace/extensions-marketplace.css
@@ -19,7 +19,7 @@
 .content {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
-    grid-template-rows: max-content;
+    grid-auto-rows: min-content;
     gap: 0.8rem;
 
     flex: 1;
